# manifold-approx

./: CMakeLists.txt  CampfireDebugConfig.ini  DataStruct.cpp  DataStruct.hpp  HarmonicsConfig.ini  README.md  StructConfig.ini  localApprox.cpp  localApprox.hpp  testHarmonicLaplace.cpp  unit_tests.cpp  utilities.cpp  utilities.hpp
